--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
+# Existing properties
 spring.application.name=fx-catalog-service
 server.port=8002
 course.service.url=http://localhost:8001
+spring.main.allow-bean-definition-overriding=true
 
-# OpenTelemetry configuration
+# Updated OpenTelemetry configuration
 otel.exporter.otlp.endpoint=http://localhost:4317
 otel.exporter.otlp.protocol=grpc
+otel.traces.exporter=otlp
 otel.metrics.exporter=none
 otel.logs.exporter=none
-otel.traces.exporter=otlp
