feat: force error in controller to test visibility in elk and logs
Replaced the /firstcourse logic in CatalogController with a forced exception to simulate an observable error for ELK/Kibana. Logs were adjusted accordingly. Prometheus exposure was also enabled again in application.properties for testing.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,6 @@ otel.logs.exporter=otlp
 management.otlp.metrics.export.step=10s
 management.tracing.sampling.probability=1.0
 
-# Deshabilitar la exportación directa de métricas Prometheus (solo usamos OTLP)
-management.endpoints.web.exposure.exclude=prometheus
-management.prometheus.metrics.export.enabled=false
+# Exponer métricas para Prometheus
+management.endpoints.web.exposure.include=prometheus
+management.prometheus.metrics.export.enabled=true
